--- a/TodoApp/Base.lproj/Main.storyboard
+++ b/TodoApp/Base.lproj/Main.storyboard
@@ -29,7 +29,14 @@
                             <outlet property="delegate" destination="cHD-mk-JMo" id="ggX-nb-wNH"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoee" id="cbf-J3-W0U"/>
+                    <navigationItem key="navigationItem" title="Todoee" id="cbf-J3-W0U">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="knb-Lx-Kkz">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="cHD-mk-JMo" id="0ff-PY-r6C"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ceU-qa-ydF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
